--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,9 @@
             <tr>
               <%= render 'shared/table_body', book:book %>
               <%= render 'book_comments/recode', book:book%>
+            <td id ="favorite_btn_<%= book.id %>" >
               <%= render 'favorites/btn', book:book %>
+            </td>
               <%= render 'shared/btn', book:book %>
             </tr>
             <% end %>
