--- a/app/views/book_comments/_table_body.html.erb
+++ b/app/views/book_comments/_table_body.html.erb
@@ -4,9 +4,9 @@
     <%= book_comment.user.name %>
   <% end %>
 </td>
-<td><%= book_comment.comment %></td>
+<td><%= link_to book_comment.comment, book_path(book_comment.book_id) %></td>
 <% if book_comment.user == current_user %>
 <td>
-  <%= link_to "Destroy", book_book_comment_path(book, book_comment), method: :delete, class: "btn btn-danger btn-sm" %>
+  <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger btn-sm" %>
 </td>
 <% end %>
