--- a/app/views/favorites/_btn.html.erb
+++ b/app/views/favorites/_btn.html.erb
@@ -1,20 +1,16 @@
-<% if book.user.id != current_user.id %>
-  <td>
+<% if book.user_id != current_user.id %>
     <% if book.favorited_by?(current_user) %>
-      <%= link_to book_favorites_path(book), method: :delete do %>
+      <%= link_to book_favorites_path(book), method: :delete, remote: true do %>
         <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
         <%= book.favorites.count %> いいね
       <% end %>
     <% else %>
-      <%= link_to book_favorites_path(book), method: :post do %>
+      <%= link_to book_favorites_path(book), method: :post, remote: true do %>
         <i class="fas fa-heart" aria-hidden="true"></i>
         <%= book.favorites.count %> いいね
       <% end %>
     <% end %>
-</td>
 <% else %>
-  <td>
     <i class="fas fa-heart" aria-hidden="true" style="color: gray;"></i>
     <%= book.favorites.count %> いいね
-  </td>
 <% end %>
