--- a/app/views/shared/_profile_btn.html.erb
+++ b/app/views/shared/_profile_btn.html.erb
@@ -6,7 +6,9 @@
     <% if current_user.following?(user) %>
       <%= link_to 'フォローを解除する', user_relationship_path(user.id), method: :delete, remote: true, class: "btn btn-outline-secondary btn-block" %>
       <!-- 相互フォローのみ表示するDM用のリンク -->
-        <%#= link_to 'メッセージルーム', user_room_path(user),class:"btn btn-outline-secondary btn-block" %>
+      <% if current_user.mutual_followed?(user.id) %>
+        <%= link_to 'メッセージルーム', room_path(user.id), class:"btn btn-outline-secondary btn-block" %>
+      <% end %>
     <% else %>
       <%= link_to 'フォローする', user_relationship_path(user.id), method: :post, remote: true, class: "btn btn-outline-secondary btn-block" %>
     <% end %>
