--- a/app/views/shared/_table_body.html.erb
+++ b/app/views/shared/_table_body.html.erb
@@ -6,3 +6,7 @@
 </td>
 <td><%= link_to book.title, book_path(book.id) %></td>
 <td><%= book.body%></td>
+<td>
+  閲覧数:
+    <%= book.impressionist_count(:filter=>:ip_address) %>
+</td>
