--- a/app/views/shared/_table_body.html.erb
+++ b/app/views/shared/_table_body.html.erb
@@ -6,3 +6,16 @@
 </td>
 <td><%= link_to book.title, book_path(book.id) %></td>
 <td><%= book.body%></td>
+<td id="show_score<%= book.id%>"></td>
+<script>
+  var elem = document.querySelector('#show_score<%= book.id%>');
+  var opt = {
+    //星画像の指定などのオプションをここに記述
+    starOff:  '<%= asset_path('star-off.png') %>',
+    starOn : '<%= asset_path('star-on.png') %>',
+    readOnly: true,
+    half: false,
+    score: '<%= book.score%>',
+   };
+  raty(elem,opt);
+</script>
