--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,6 +1,6 @@
 <% change_submit_text %>
 <h2 class="mt-3"><%= change_form_title %></h2>
-<%= form_with model:book, url: books_path,local:true do |f| %>
+<%= form_with model:book, local:true do |f| %>
   <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: 'form-control book_title' %>
@@ -9,22 +9,29 @@
     <%= f.label :opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
-  <div id="score_star" class="form-group">
-    <%= f.label :score %><br>
-    <%= f.hidden_field :score %>
-  </div>
+
+  <% if book.id == nil %>
+    <div id="score_star" class="form-group">
+      <%= f.label :score %><br>
+      <%= f.hidden_field :score %>
+    </div>
+    <script>
+    $(document).on('turbolinks:load', function(){
+      let elem = document.querySelector('#score_star');
+      let opt = {
+        //星画像の指定などのオプションをここに記述
+        starOff:  '<%= asset_path('star-off.png') %>',
+        starOn : '<%= asset_path('star-on.png') %>',
+        scoreName: 'book[score]',
+        half: false,
+        };
+      raty(elem,opt);
+    });
+    </script>
+  <% else %>
+    <%= render "shared/score", book: book %>
+  <% end %>
   <div class="form-group">
     <%= f.submit "#{@btn_text}", class: 'btn btn-success' %>
   </div>
-  <script>
-  let elem = document.querySelector('#score_star');
-  let opt = {
-   //星画像の指定などのオプションをここに記述
-    starOff:  '<%= asset_path('star-off.png') %>',
-    starOn : '<%= asset_path('star-on.png') %>',
-    scoreName: 'book[score]',
-    half: false,
-  };
-  raty(elem,opt);
-</script>
 <% end %>
