--- a/app/views/shared/_table_head.html.erb
+++ b/app/views/shared/_table_head.html.erb
@@ -1,12 +1,21 @@
-<h2><%= change_table_title%></h2>
+<div class="d-flex m-0 justify-content-between mb-1">
+  <h2><%= change_table_title%></h2>
+  <%if request.path == "/books" %>
+  <div class="align-self-end">
+  <%= link_to '投稿の新しい順', books_path, 'data-turbolinks': false %>
+  <span>|</span>
+  <%= link_to '評価の高い順', books_path(sort_score: "true"), 'data-turbolinks': false %>
+  </div>
+  <% end %>
+</div>
 <table class="table table-hover table-inverse">
   <thead>
     <tr>
       <th><%= @start_column%></th>
-      <th><%= @center_column%></th>
+      <th><%= @second_column%></th>
+      <th><%= @third_column%></th>
       <th><%= @end_column%></th>
-      <th></th>
-      <th></th>
+      <th colspan="2" ></th>
     </tr>
   </thead>
   <tbody>
