--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,19 +9,19 @@
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
           <li>
-            <%= link_to user_path(current_user),class: 'nav-link text-light' do %>
+            <%= link_to user_path(current_user),class: 'nav-link text-light','data-turbolinks': false do %>
               <i class="fas fa-home"></i> Home
             <% end %>
           </li>
 
           <li>
-            <%=  link_to users_path,class: 'nav-link text-light' do %>
+            <%=  link_to users_path,class: 'nav-link text-light','data-turbolinks': false do %>
               <i class="fas fa-users"></i> Users
             <% end %>
           </li>
 
           <li>
-            <%=  link_to books_path ,class: 'nav-link text-light' do %>
+            <%=  link_to books_path ,class: 'nav-link text-light','data-turbolinks': false do %>
               <i class="fas fa-book-open"></i> Books
             <% end %>
           </li>
