--- a/app/views/book_comments/_table_body.html.erb
+++ b/app/views/book_comments/_table_body.html.erb
@@ -1,10 +1,10 @@
 <td>
-  <%= link_to user_path(book_comment.user) do %>
+  <%= link_to user_path(book_comment.user),'data-turbolinks': false do %>
     <%= image_tag book_comment.user.image_resize(50, 50) %><br>
     <%= book_comment.user.name %>
   <% end %>
 </td>
-<td><%= link_to book_comment.comment, book_path(book_comment.book_id) %></td>
+<td><%= link_to book_comment.comment, book_path(book_comment.book_id),'data-turbolinks': false %></td>
 <% if book_comment.user == current_user %>
 <td>
   <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-danger btn-sm" %>
