--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -9,6 +9,10 @@
     <%= f.label :opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
+  <div class="form-group">
+    <%= f.label :category %>
+    <%= f.select :category, Book.categories_i18n.invert.to_a,{include_blank: '選択してください' }, {class: 'form-control book_category w-75', required: true} %>
+  </div>
 
   <% if book.id == nil %>
     <div id="star" class="form-group mb-0">
