--- a/app/views/shared/_table_body.html.erb
+++ b/app/views/shared/_table_body.html.erb
@@ -1,10 +1,11 @@
 <td>
-  <%= link_to user_path(book.id)  do %>
+  <%= link_to user_path(book.id), 'data-turbolinks': false  do %>
     <%= image_tag book.user.image_resize(50,50) %>
     <br><span class="hidden"><%= book.user.name  %></span>
   <% end %>
 </td>
-<td><%= link_to book.title, book_path(book.id) %></td>
+<td><%= link_to book.title, book_path(book.id),'data-turbolinks': false %></td>
+<td><%= link_to book.category, books_path(search: book.category), 'data-turbolinks': false %></td>
 <td><%= book.body%></td>
 <td id="show_score<%= book.id%>"></td>
 <script>
