--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,19 @@
-    <div class='col-md-3'>
-      <%= render 'shared/profile', user: @user %>
-      <%= render 'shared/form', book: @form %>
-    </div>
-    <div class="col-md-8 offset-md-1">
-        <%= render 'shared/table_head' %>
-          <% @books.each do |book| %>
-            <tr>
-              <%= render 'shared/table_body', book:book %>
-              <%= render 'book_comments/recode', book:book%>
-            <td id ="favorite_btn_<%= book.id %>" >
-              <%= render 'favorites/btn', book:book %>
-            </td>
-              <%= render 'shared/btn', book:book %>
-            </tr>
-            <% end %>
-          <%= render 'shared/table_under' %>
+<div class='col-md-3'>
+  <%= render 'shared/profile', user: @user %>
+  <%= render 'shared/form', book: @form %>
+</div>
+<div class="col-md-8 offset-md-1">
+  <%= render 'shared/table_head' %>
+  <% @books.each do |book| %>
+  <tr>
+    <%= render 'shared/table_body', book:book %>
+    <%= render 'book_comments/recode', book:book%>
+    <td id ="favorite_btn_<%= book.id %>" >
+      <%= render 'favorites/btn', book:book %>
+    </td>
+      <%= render 'shared/btn', book:book %>
+  </tr>
+  <% end %>
+  <%= render 'shared/table_under' %>
+  <%= render 'shared/conparion' %>
+</div>
