--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class='col-md-3'>
   <%= render 'shared/profile', user: @user %>
-  <%= render 'shared/form', book: @form %>
+  <%= render 'shared/form', book: @book %>
 </div>
 <div class="col-md-8 offset-md-1">
   <%= render 'shared/table_head' %>
